--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\"",
     "dev:client": "vite",
     "dev:server": "tsx watch server/index.ts",
-    "build": "npm run db:push && npm run build:client && npm run build:server",
+    "build": "npm run build:client && npm run build:server",
     "build:client": "vite build",
-    "build:server": "esbuild server/index.ts --bundle --platform=node --outfile=dist/index.js --format=esm",
-    "start": "node dist/index.js",
+    "build:server": "tsc server/index.new.ts --outDir dist --module es2020 --moduleResolution node --target es2020 && cp -r server/production.ts dist/",
+    "start": "NODE_ENV=production node dist/index.js",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio"
   },
