--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@babel/preset-typescript": "^7.23.3",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
@@ -42,7 +43,6 @@
     "autoprefixer": "^10.4.17",
     "concurrently": "^8.2.2",
     "drizzle-kit": "^0.20.13",
-    "esbuild": "^0.20.0",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.7.0",
